--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
   "type": "module",
   "dependencies": {
     "@tsconfig/node22": "^22.0.2"
+  },
+  "scripts": {
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "npm run build && npm run start"
   }
 }
